# zigroot-cli

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  build.rs  cliff.toml  deny.toml  package.json  proptest.toml  release-plz.toml  rustfmt.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
.kiro/specs/zigroot-cli/: design.md  requirements.md  tasks.md
aur/: PKGBUILD
src/: error.rs  lib.rs  main.rs  test_utils.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: add.rs  board.rs  build.rs  cache.rs  check.rs  clean.rs  config.rs  doctor.rs  external.rs  fetch.rs  flash.rs  init.rs  kernel.rs  license.rs  mod.rs  package.rs  publish.rs  remove.rs  sdk.rs  search.rs  tree.rs  update.rs  verify.rs
src/cli/tui/: config.rs  mod.rs
src/config/: defaults.rs  mod.rs  urls.rs
src/core/: add.rs  board.rs  build_env.rs  builder.rs  cache.rs  check.rs  clean.rs  compress.rs  config.rs  doctor.rs  external.rs  fetch.rs  flash.rs  global_config.rs  init.rs  kernel.rs  license.rs  lock.rs  manifest.rs  mod.rs  options.rs  package.rs  remove.rs  resolver.rs  sdk.rs  search.rs  shared_storage.rs  tree.rs  update.rs  version.rs
src/infra/: dirs.rs  download.rs  filesystem.rs  gcc_toolchain.rs  git.rs  mod.rs  sandbox.rs  toolchain.rs
src/registry/: cache.rs  client.rs  mod.rs
tests/: add_test.proptest-regressions  add_test.rs  board_info_test.rs  board_list_test.rs  board_new_test.rs  board_set_test.rs  build_test.rs  cache_test.rs  check_test.rs  clean_test.rs  compress_test.rs  config_management_test.rs  config_test.rs  dirs_test.rs  doctor_test.rs  external_test.rs  fetch_test.rs  flash_test.proptest-regressions  flash_test.rs  full_workflow_test.rs  gcc_toolchain_test.rs  global_config_test.rs  init_test.proptest-regressions  init_test.rs  integration_test.rs  kernel_test.rs  license_test.proptest-regressions  license_test.rs  output_test.rs  package_bump_test.rs  package_info_test.rs  package_list_test.rs  package_new_test.rs  package_test_test.rs  publish_test.rs  remove_test.proptest-regressions  remove_test.rs  sandbox_test.rs  sdk_test.rs  search_test.proptest-regressions  (+8 more)
tests/common/: mod.rs
tests/fixtures/board/: valid.toml
tests/fixtures/manifest/: valid.toml
tests/fixtures/package/: valid.toml
